packages/delta_ffi/headers/deltachat.h

typedef struct dc_context dc_context_t;
typedef struct dc_event dc_event_t;
typedef struct dc_event_emitter dc_event_emitter_t;
typedef struct dc_accounts dc_accounts_t;
typedef struct dc_array dc_array_t;
typedef struct dc_chat dc_chat_t;
typedef struct dc_chatlist dc_chatlist_t;
typedef struct dc_contact dc_contact_t;
typedef struct dc_msg dc_msg_t;
#define DC_MSG_UNDEFINED 0
#define DC_MSG_TEXT 10
#define DC_MSG_IMAGE 20
#define DC_MSG_GIF 21
#define DC_MSG_STICKER 23
#define DC_MSG_AUDIO 40
#define DC_MSG_VOICE 41
#define DC_MSG_VIDEO 50
#define DC_MSG_FILE 60
#define DC_MSG_CALL 71
#define DC_MSG_WEBXDC 80
#define DC_MSG_VCARD 90
#define DC_INFO_UNKNOWN 0
#define DC_INFO_GROUP_NAME_CHANGED 2
#define DC_INFO_GROUP_IMAGE_CHANGED 3
#define DC_INFO_MEMBER_ADDED_TO_GROUP 4
#define DC_INFO_MEMBER_REMOVED_FROM_GROUP 5
#define DC_INFO_AUTOCRYPT_SETUP_MESSAGE 6
#define DC_INFO_SECURE_JOIN_MESSAGE 7
#define DC_INFO_LOCATIONSTREAMING_ENABLED 8
#define DC_INFO_LOCATION_ONLY 9
#define DC_INFO_EPHEMERAL_TIMER_CHANGED 10
#define DC_INFO_PROTECTION_ENABLED 11
#define DC_INFO_INVALID_UNENCRYPTED_MAIL 13
#define DC_INFO_WEBXDC_INFO_MESSAGE 32
#define DC_INFO_CHAT_E2EE 50
#define DC_STATE_UNDEFINED 0
#define DC_STATE_IN_FRESH 10
#define DC_STATE_IN_NOTICED 13
#define DC_STATE_IN_SEEN 16
#define DC_STATE_OUT_PREPARING 18
#define DC_STATE_OUT_DRAFT 19
#define DC_STATE_OUT_PENDING 20
#define DC_STATE_OUT_FAILED 24
#define DC_STATE_OUT_DELIVERED 26
#define DC_STATE_OUT_MDN_RCVD 28
#define DC_MSG_NO_ID 0
#define DC_MSG_ID_MARKER1 1
#define DC_MSG_ID_DAYMARKER 9
#define DC_VIDEOCHATTYPE_UNKNOWN 0
#define DC_VIDEOCHATTYPE_BASICWEBRTC 1
dc_array_t* dc_search_msgs(dc_context_t* ctx, uint32_t chat_id, const char* query);
void dc_set_chat_visibility(dc_context_t* ctx, uint32_t chat_id, int visibility);
void dc_download_full_msg(dc_context_t* ctx, int msg_id);
int dc_msg_get_download_state(const dc_msg_t* msg);
int dc_resend_msgs(dc_context_t* ctx, const uint32_t* msg_ids, int msg_cnt);
char* dc_msg_get_error(const dc_msg_t* msg);
dc_array_t* dc_get_contacts(dc_context_t* ctx, uint32_t flags, const char* query);
dc_array_t* dc_get_blocked_contacts(dc_context_t* ctx);
int dc_delete_contact(dc_context_t* ctx, uint32_t contact_id);