packages/delta_ffi/lib/src/bindings.dart


  late final _dc_search_msgsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<dc_array_t> Function(ffi.Pointer<dc_context_t>,
              ffi.Uint32, ffi.Pointer<ffi.Char>)>>('dc_search_msgs');
  late final _dc_search_msgs = _dc_search_msgsPtr.asFunction<
      ffi.Pointer<dc_array_t> Function(
          ffi.Pointer<dc_context_t>, int, ffi.Pointer<ffi.Char>)>();

  void dc_set_chat_visibility(
    ffi.Pointer<dc_context_t> ctx,
    int chat_id,
    int visibility,
  ) {
    return _dc_set_chat_visibility(
      ctx,
      chat_id,
      visibility,
    );
  }

  late final _dc_set_chat_visibilityPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<dc_context_t>, ffi.Uint32,
              ffi.Int)>>('dc_set_chat_visibility');
  late final _dc_set_chat_visibility = _dc_set_chat_visibilityPtr
      .asFunction<void Function(ffi.Pointer<dc_context_t>, int, int)>();

  void dc_download_full_msg(
    ffi.Pointer<dc_context_t> ctx,
    int msg_id,
  ) {
    return _dc_download_full_msg(
      ctx,
      msg_id,
    );
  }

  late final _dc_download_full_msgPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<dc_context_t>, ffi.Int)>>('dc_download_full_msg');
  late final _dc_download_full_msg = _dc_download_full_msgPtr
      .asFunction<void Function(ffi.Pointer<dc_context_t>, int)>();

  int dc_msg_get_download_state(
    ffi.Pointer<dc_msg_t> msg,
  ) {
    return _dc_msg_get_download_state(
      msg,
    );
  }

  late final _dc_msg_get_download_statePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<dc_msg_t>)>>(
          'dc_msg_get_download_state');
  late final _dc_msg_get_download_state = _dc_msg_get_download_statePtr
      .asFunction<int Function(ffi.Pointer<dc_msg_t>)>();

  int dc_resend_msgs(
    ffi.Pointer<dc_context_t> ctx,
    ffi.Pointer<ffi.Uint32> msg_ids,
    int msg_cnt,
  ) {
    return _dc_resend_msgs(
      ctx,
      msg_ids,
      msg_cnt,
    );
  }

  late final _dc_resend_msgsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<dc_context_t>, ffi.Pointer<ffi.Uint32>,
              ffi.Int)>>('dc_resend_msgs');
  late final _dc_resend_msgs = _dc_resend_msgsPtr.asFunction<
      int Function(ffi.Pointer<dc_context_t>, ffi.Pointer<ffi.Uint32>, int)>();

  ffi.Pointer<ffi.Char> dc_msg_get_error(
    ffi.Pointer<dc_msg_t> msg,
  ) {
    return _dc_msg_get_error(
      msg,
    );
  }

  late final _dc_msg_get_errorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<dc_msg_t>)>>('dc_msg_get_error');
  late final _dc_msg_get_error = _dc_msg_get_errorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<dc_msg_t>)>();

  ffi.Pointer<dc_array_t> dc_get_contacts(
    ffi.Pointer<dc_context_t> ctx,
    int flags,
    ffi.Pointer<ffi.Char> query,
  ) {
    return _dc_get_contacts(
      ctx,
      flags,
      query,
    );
  }

  late final _dc_get_contactsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<dc_array_t> Function(ffi.Pointer<dc_context_t>,
              ffi.Uint32, ffi.Pointer<ffi.Char>)>>('dc_get_contacts');
  late final _dc_get_contacts = _dc_get_contactsPtr.asFunction<
      ffi.Pointer<dc_array_t> Function(
          ffi.Pointer<dc_context_t>, int, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<dc_array_t> dc_get_blocked_contacts(
    ffi.Pointer<dc_context_t> ctx,
  ) {
    return _dc_get_blocked_contacts(
      ctx,
    );
  }

  late final _dc_get_blocked_contactsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<dc_array_t> Function(
              ffi.Pointer<dc_context_t>)>>('dc_get_blocked_contacts');
  late final _dc_get_blocked_contacts = _dc_get_blocked_contactsPtr.asFunction<
      ffi.Pointer<dc_array_t> Function(ffi.Pointer<dc_context_t>)>();

  int dc_delete_contact(
    ffi.Pointer<dc_context_t> ctx,
    int contact_id,
  ) {
    return _dc_delete_contact(
      ctx,
      contact_id,
    );
  }

  late final _dc_delete_contactPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<dc_context_t>, ffi.Uint32)>>('dc_delete_contact');
  late final _dc_delete_contact = _dc_delete_contactPtr
      .asFunction<int Function(ffi.Pointer<dc_context_t>, int)>();
}

final class __mbstate_t extends ffi.Union {
  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> __mbstate8;

  @ffi.LongLong()
  external int _mbstateL;
}

final class __darwin_pthread_handler_rec extends ffi.Struct {
  external ffi
      .Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>
      __routine;

  external ffi.Pointer<ffi.Void> __arg;

  external ffi.Pointer<__darwin_pthread_handler_rec> __next;
}

final class _opaque_pthread_attr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_cond_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([40])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_condattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutex_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutexattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_once_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlock_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([192])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlockattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([16])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  external ffi.Pointer<__darwin_pthread_handler_rec> __cleanup_stack;

  @ffi.Array.multi([8176])
  external ffi.Array<ffi.Char> __opaque;
}

final class dc_context extends ffi.Opaque {}

final class dc_event extends ffi.Opaque {}

final class dc_event_emitter extends ffi.Opaque {}

final class dc_accounts extends ffi.Opaque {}

final class dc_array extends ffi.Opaque {}

final class dc_chat extends ffi.Opaque {}

final class dc_chatlist extends ffi.Opaque {}

final class dc_contact extends ffi.Opaque {}

final class dc_msg extends ffi.Opaque {}

typedef dc_accounts_t = dc_accounts;
typedef dc_array_t = dc_array;
typedef dc_context_t = dc_context;
typedef dc_event_emitter_t = dc_event_emitter;
typedef dc_chatlist_t = dc_chatlist;
typedef dc_event_t = dc_event;
typedef dc_msg_t = dc_msg;
typedef dc_chat_t = dc_chat;
typedef dc_contact_t = dc_contact;

const int __has_safe_buffers = 1;

const int __DARWIN_ONLY_64_BIT_INO_T = 1;

const int __DARWIN_ONLY_UNIX_CONFORMANCE = 1;

const int __DARWIN_ONLY_VERS_1050 = 1;

const int __DARWIN_UNIX03 = 1;

const int __DARWIN_64_BIT_INO_T = 1;

const int __DARWIN_VERS_1050 = 1;

const int __DARWIN_NON_CANCELABLE = 0;

const String __DARWIN_SUF_EXTSN = '\$DARWIN_EXTSN';

const int __DARWIN_C_ANSI = 4096;

const int __DARWIN_C_FULL = 900000;

const int __DARWIN_C_LEVEL = 900000;

const int __STDC_WANT_LIB_EXT1__ = 1;

const int __DARWIN_NO_LONG_LONG = 0;

const int _DARWIN_FEATURE_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_VERS_1050 = 1;

const int _DARWIN_FEATURE_ONLY_UNIX_CONFORMANCE = 1;

const int _DARWIN_FEATURE_UNIX_CONFORMANCE = 3;

const int __has_ptrcheck = 0;

const int __DARWIN_NULL = 0;

const int __PTHREAD_SIZE__ = 8176;

const int __PTHREAD_ATTR_SIZE__ = 56;

const int __PTHREAD_MUTEXATTR_SIZE__ = 8;

const int __PTHREAD_MUTEX_SIZE__ = 56;

const int __PTHREAD_CONDATTR_SIZE__ = 8;

const int __PTHREAD_COND_SIZE__ = 40;

const int __PTHREAD_ONCE_SIZE__ = 8;

const int __PTHREAD_RWLOCK_SIZE__ = 192;

const int __PTHREAD_RWLOCKATTR_SIZE__ = 16;

const int __DARWIN_WCHAR_MAX = 2147483647;

const int __DARWIN_WCHAR_MIN = -2147483648;

const int __DARWIN_WEOF = -1;

const int _FORTIFY_SOURCE = 2;

const int NULL = 0;

const int USER_ADDR_NULL = 0;

const int __WORDSIZE = 64;

const int INT8_MAX = 127;

const int INT16_MAX = 32767;

const int INT32_MAX = 2147483647;

const int INT64_MAX = 9223372036854775807;

const int INT8_MIN = -128;

const int INT16_MIN = -32768;

const int INT32_MIN = -2147483648;

const int INT64_MIN = -9223372036854775808;

const int UINT8_MAX = 255;

const int UINT16_MAX = 65535;

const int UINT32_MAX = 4294967295;

const int UINT64_MAX = -1;

const int INT_LEAST8_MIN = -128;

const int INT_LEAST16_MIN = -32768;

const int INT_LEAST32_MIN = -2147483648;

const int INT_LEAST64_MIN = -9223372036854775808;

const int INT_LEAST8_MAX = 127;

const int INT_LEAST16_MAX = 32767;

const int INT_LEAST32_MAX = 2147483647;

const int INT_LEAST64_MAX = 9223372036854775807;

const int UINT_LEAST8_MAX = 255;

const int UINT_LEAST16_MAX = 65535;

const int UINT_LEAST32_MAX = 4294967295;

const int UINT_LEAST64_MAX = -1;

const int INT_FAST8_MIN = -128;

const int INT_FAST16_MIN = -32768;

const int INT_FAST32_MIN = -2147483648;

const int INT_FAST64_MIN = -9223372036854775808;

const int INT_FAST8_MAX = 127;

const int INT_FAST16_MAX = 32767;

const int INT_FAST32_MAX = 2147483647;

const int INT_FAST64_MAX = 9223372036854775807;

const int UINT_FAST8_MAX = 255;

const int UINT_FAST16_MAX = 65535;

const int UINT_FAST32_MAX = 4294967295;

const int UINT_FAST64_MAX = -1;

const int INTPTR_MAX = 9223372036854775807;

const int INTPTR_MIN = -9223372036854775808;

const int UINTPTR_MAX = -1;

const int INTMAX_MAX = 9223372036854775807;

const int UINTMAX_MAX = -1;

const int INTMAX_MIN = -9223372036854775808;

const int PTRDIFF_MIN = -9223372036854775808;

const int PTRDIFF_MAX = 9223372036854775807;

const int SIZE_MAX = -1;

const int RSIZE_MAX = 9223372036854775807;

const int WCHAR_MAX = 2147483647;

const int WCHAR_MIN = -2147483648;

const int WINT_MIN = -2147483648;

const int WINT_MAX = 2147483647;

const int SIG_ATOMIC_MIN = -2147483648;

const int SIG_ATOMIC_MAX = 2147483647;

const int DC_MSG_UNDEFINED = 0;

const int DC_MSG_TEXT = 10;

const int DC_MSG_IMAGE = 20;

const int DC_MSG_GIF = 21;

const int DC_MSG_STICKER = 23;

const int DC_MSG_AUDIO = 40;

const int DC_MSG_VOICE = 41;

const int DC_MSG_VIDEO = 50;

const int DC_MSG_FILE = 60;

const int DC_MSG_CALL = 71;

const int DC_MSG_WEBXDC = 80;

const int DC_MSG_VCARD = 90;

const int DC_INFO_UNKNOWN = 0;

const int DC_INFO_GROUP_NAME_CHANGED = 2;

const int DC_INFO_GROUP_IMAGE_CHANGED = 3;

const int DC_INFO_MEMBER_ADDED_TO_GROUP = 4;

const int DC_INFO_MEMBER_REMOVED_FROM_GROUP = 5;

const int DC_INFO_AUTOCRYPT_SETUP_MESSAGE = 6;

const int DC_INFO_SECURE_JOIN_MESSAGE = 7;

const int DC_INFO_LOCATIONSTREAMING_ENABLED = 8;

const int DC_INFO_LOCATION_ONLY = 9;

const int DC_INFO_EPHEMERAL_TIMER_CHANGED = 10;

const int DC_INFO_PROTECTION_ENABLED = 11;

const int DC_INFO_INVALID_UNENCRYPTED_MAIL = 13;

const int DC_INFO_WEBXDC_INFO_MESSAGE = 32;

const int DC_INFO_CHAT_E2EE = 50;

const int DC_STATE_UNDEFINED = 0;

const int DC_STATE_IN_FRESH = 10;

const int DC_STATE_IN_NOTICED = 13;

const int DC_STATE_IN_SEEN = 16;

const int DC_STATE_OUT_PREPARING = 18;

const int DC_STATE_OUT_DRAFT = 19;

const int DC_STATE_OUT_PENDING = 20;

const int DC_STATE_OUT_FAILED = 24;

const int DC_STATE_OUT_DELIVERED = 26;

const int DC_STATE_OUT_MDN_RCVD = 28;

const int DC_MSG_NO_ID = 0;

const int DC_MSG_ID_MARKER1 = 1;

const int DC_MSG_ID_DAYMARKER = 9;

const int DC_VIDEOCHATTYPE_UNKNOWN = 0;

const int DC_VIDEOCHATTYPE_BASICWEBRTC = 1;
